--- a/index.html
+++ b/index.html
@@ -69,6 +69,10 @@
           </div>
         </div>
       </div>
+      <footer>
+        Coded by Jaimie Casias 
+        <a href="url">https://github.com/jaimierae525</a>
+      </footer>
     </div>
     <script src="src/index.js"></script>
   </body>
