--- a/index.html
+++ b/index.html
@@ -69,10 +69,12 @@
           </div>
         </div>
       </div>
-      <footer>
-        Coded by Jaimie Casias 
-        <a href="url">https://github.com/jaimierae525</a>
-      </footer>
+      <small>
+      <a
+         href="https://github.com/jaimierae525/weatherapp" target="_blank" >Open-source code</a>
+         by Jaimie Casias
+        </small>
+       
     </div>
     <script src="src/index.js"></script>
   </body>
