Add icon Added icon

--- a/index.html
+++ b/index.html
@@ -55,6 +55,10 @@
         <div class="row">
           <div class="col-6">
             <div class="clearfix">
+              <img src="https://openweathermap.org/img/wn/01n@2x.png"
+              alt="Clear"
+              id="icon"
+              />
               <div class="float-left">
                 <span class="temperature" id="temperature"></span
                 ><span class="units">°C</span>
@@ -79,3 +83,4 @@
     <script src="src/index.js"></script>
   </body>
 </html>
+
