--- a/index.html
+++ b/index.html
@@ -55,17 +55,16 @@
         <div class="row">
           <div class="col-6">
             <div class="clearfix">
-              <img
-                src="https://openweathermap.org/img/wn/01n@2x.png"
-                alt="Clear"
-                id="icon"
+              <img src="https://openweathermap.org/img/wn/01n@2x.png"
+              alt="Clear"
+              id="icon"
               />
               <div class="float-right">
-                <strong id="temperature"></strong>
-                <span class="units">
-                  <a href="#" id="celsius-link" class="active">°C</a> |
-                  <a hreh="#" id="fahrenheit-link">°F</a>
-                </span>
+            <strong id="temperature"></strong>
+            <span class="units"> <a href="#" id="celsius-link" class="active">°C</a> |
+                <a hreh="#" id="fahrenheit-link">°F</a>
+
+            </span>
               </div>
             </div>
           </div>
@@ -76,14 +75,30 @@
             </ul>
           </div>
         </div>
+        <div class="weather-forecast" id="forecast">
+          <div class="row">
+            <div class="col-2"> 
+              <div class="weather-forecast-date">Thu</div>
+              
+              <img src="https://openweathermap.org/img/wn/01n@2x.png"
+              width=" 36" />
+              <div class = "weather-forcast-temperatures">
+                <span class= "weather-forcast-temperature-max">18°</span>
+              <span class="weather-forecast-temperature-min">
+                12°
+              </span>
+            </div>
+          </div>
+        </div>
       </div>
       <small>
-        <a href="https://github.com/jaimierae525/weatherapp" target="_blank"
-          >Open-source code</a
-        >
-        by Jaimie Casias
-      </small>
+      <a
+         href="https://github.com/jaimierae525/weatherapp" target="_blank" >Open-source code</a>
+         by Jaimie Casias
+        </small>
+       
     </div>
     <script src="src/index.js"></script>
   </body>
 </html>
+
